--- a/app/src/main/res/layout/fragment_pizza_store_list.xml
+++ b/app/src/main/res/layout/fragment_pizza_store_list.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".fragment.PizzaStoreListFragment">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/mainTabLayout"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:tabMode="fixed" />
+        android:text="피자 주문 프래그먼트"
+        android:textSize="30sp"/>
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/mainViewPager"
+    <ListView
+        android:id="@+id/pizzaOrderListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
