--- a/app/src/main/res/layout/pizza_store_list_item.xml
+++ b/app/src/main/res/layout/pizza_store_list_item.xml
@@ -14,7 +14,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/pizzaStoreImg"
+            android:id="@+id/logoImg"
             android:layout_width="48dp"
             android:layout_height="48dp"
             android:src="@drawable/ic_launcher_background"
@@ -23,7 +23,7 @@
             android:layout_margin="8dp"/>
 
         <TextView
-            android:id="@+id/"
+            android:id="@+id/nameTxt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="피자가게"
