--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -59,6 +59,7 @@
             android:layout_weight="1"/>
 
         <Button
+            android:id="@+id/dialBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="전화 주문"/>
